feat: Introduce categories for reminders
Replace generic icons with named categories (e.g., "Memoria", "Trabajo") to provide more context for reminders. Update the UI to display category names and improve user experience. Also, renames the application to "Para no olvidar" across project files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calendario-de-recuerdo",
+  "name": "para-no-olvidar",
   "private": true,
   "version": "0.0.0",
   "type": "module",
